# notion-weechat-plugin

./: CMakeLists.txt  notion.c
